# nkv

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main_ci.yml  pr_ci.yml  release_ci.yml
benches/: nkv_bench.rs
docs/: CLIENT_SERVER_PROTOCOL.md
src/: errors.rs  flag_parser.rs  lib.rs  nkv.rs  notifier.rs  persist_value.rs  request_msg.rs  srv.rs  traits.rs  trie.rs
src/client/: main.rs
src/server/: main.rs
src/storage/: file_storage.rs  memory_storage.rs  router_storage.rs  traits.rs
